cxf integration